--- a/OOP_Text_ShootingGame/OOP_Text_ShootingGame.vcxproj.filters
+++ b/OOP_Text_ShootingGame/OOP_Text_ShootingGame.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClCompile Include="BulletInfo.cpp">
       <Filter>4. Resource</Filter>
     </ClCompile>
+    <ClCompile Include="PatternParser.cpp">
+      <Filter>4. Resource</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
