Container에 list 넣음

--- a/OOP_Text_ShootingGame/OOP_Text_ShootingGame.vcxproj
+++ b/OOP_Text_ShootingGame/OOP_Text_ShootingGame.vcxproj
@@ -164,6 +164,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\Container\list.h" />
     <ClInclude Include="source\Game\Bullet.h" />
     <ClInclude Include="source\Game\Enemy.h" />
     <ClInclude Include="source\PatternList.h" />
