--- a/OOP_Text_ShootingGame/OOP_Text_ShootingGame.vcxproj.filters
+++ b/OOP_Text_ShootingGame/OOP_Text_ShootingGame.vcxproj.filters
@@ -92,6 +92,9 @@
     <ClCompile Include="source\Game\Bullet.cpp">
       <Filter>3. ShootingGame</Filter>
     </ClCompile>
+    <ClCompile Include="source\Engine\ObjectManager.cpp">
+      <Filter>1.Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Engine\GameBase.h">
@@ -171,6 +174,9 @@
     </ClInclude>
     <ClInclude Include="source\Container\list.h">
       <Filter>0. Container</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Engine\ObjectManager.h">
+      <Filter>1.Engine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
